# sheldx

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.MD  README.md  dump.rdb  t
.github/: FUNDING.yml
cli/: go.mod  go.sum  main.go
cli/cmd/: init.go  restart.go  root.go  start.go  status.go  stop.go
cli/config/: config.go  create.go
cli/utils/: common.go  processes.go
redis/: redis.conf
src/: lib.rs  main.rs
src/handlers/: handle_connection.rs  handle_http.rs  handle_https.rs  mod.rs
src/server/: mod.rs  start.rs  start_sheildx.rs  start_sheldx.rs
src/services/: mod.rs  rate_limit.rs
src/utils/: configs.rs  http_errors.rs  logger.rs  mod.rs
src/utils/macros/: mod.rs
src/utils/redis/: mod.rs
tests/: integration_test.rs  test_docs.md
