[package]
name = "sheldx"
version = "0.1.0"
edition = "2021"

[dependencies]

hyper = { version = "1", features = ["full"] }
hyper-tls = "0.6.0"
tokio={version="1.4.1", features=["full"]}
tokio-rustls = "0.26.0"
rustls = "0.23.12"
rustls-pemfile = "2.1.2"
toml = "0.8.18"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
dirs = "5.0.1"
log4rs = "1.3.0"
chrono = "0.4.19"
fern = "0.6.0"
env_logger  = "0.11.5"
colored = "2.0"
async-trait = "0.1.51"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
webpki-roots = "0.26.3"
thiserror   = "1.0.29"
